[gd_scene load_steps=13 format=3 uid="uid://yp80mbacordc"]

[ext_resource type="Script" path="res://Game/Info Scene/LearnMore.gd" id="1_v0wac"]
[ext_resource type="Texture2D" uid="uid://cd042arow24w5" path="res://Assets/Background/background-image.jpg" id="2_sjtbc"]

[sub_resource type="Gradient" id="Gradient_kv7qp"]
colors = PackedColorArray(0.94902, 0.952941, 0.956863, 1, 0.94902, 0.952941, 0.956863, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_cdvgw"]
gradient = SubResource("Gradient_kv7qp")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mqxo2"]
bg_color = Color(0.94902, 0.952941, 0.956863, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="SystemFont" id="SystemFont_yghi6"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_upnqw"]
font_names = PackedStringArray("Avenir")
font_weight = 700

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_omtam"]
bg_color = Color(0.992157, 0.992157, 0.992157, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="SystemFont" id="SystemFont_0dkva"]
font_names = PackedStringArray("Avenir")
font_weight = 700

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w46ca"]
bg_color = Color(0.992157, 0.992157, 0.992157, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="SystemFont" id="SystemFont_hqydu"]
font_names = PackedStringArray("Avenir")
font_weight = 700

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jns42"]
bg_color = Color(0.992157, 0.992157, 0.992157, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="LearnMore" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v0wac")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_cdvgw")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.0
offset_top = -326.0
offset_right = 221.0
offset_bottom = 323.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mqxo2")

[node name="TextureRect" type="TextureRect" parent="Control/Panel"]
modulate = Color(1, 1, 1, 0.215686)
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -391.003
offset_top = -49.0
offset_right = 463.003
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sjtbc")
expand_mode = 3
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -322.5
offset_right = 202.0
offset_bottom = 326.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0941176, 0.0941176, 0.0941176, 1)
theme_override_fonts/font = SubResource("SystemFont_yghi6")
theme_override_font_sizes/font_size = 42
text = "Flagship"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 80
alignment = 1

[node name="PlayButton" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.0941176, 0.0941176, 0.0941176, 1)
theme_override_fonts/font = SubResource("SystemFont_upnqw")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_omtam")
text = "Play"

[node name="MainButton" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.0941176, 0.0941176, 0.0941176, 1)
theme_override_fonts/font = SubResource("SystemFont_0dkva")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_w46ca")
text = "Main"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.0941176, 0.0941176, 0.0941176, 1)
theme_override_fonts/font = SubResource("SystemFont_hqydu")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_jns42")
text = "Quit"
